--- a/Views/passwordreset.html
+++ b/Views/passwordreset.html
@@ -1,42 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+    <title>Reset Password</title>
+
   <link rel="stylesheet" href="/Styles/bootstrap.min.css">
-  <script src="Script/passwordreset.js"></script>
-  <link rel="stylesheet" href="Styles/passwordreset.css">
+  <!-- <script src="Script/signin.js"></script> -->
+  <!-- <link rel="stylesheet" href="Styles/signin.css"> -->
+  <link rel="stylesheet" type="text/css" href="/Styles/passwordreset.css">
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/Styles/toast.css">
+  <script src="/Script/toast.js"></script>
+  <script type="text/javascript" src="/Script/passwordreset.js"></script>
 </head>
 <body>
 
-<div class="topnav">
+<!-- <div class="topnav">
 
    <a class="active" href="/" id="home">Home</a>
    
+</div>
+ -->
+ <div class="topnav" id="top-menu">
+  <!-- <img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" > -->
+    <ul>
+
+      <li><a href="/" id="home">Home</a></li>
+       <li><a  href="/residentstudent" id="entry">Entry List</a></li>
+       <!-- <li><a href="/login" id="login">Log In</a></li> -->
+       <li><a href="/login" id="gst">Guest Form</a></li>
+       <li><a href="/contact" id="cntct">Contact</a></li>
+       <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID"></input></li>
+     </ul>
+
+</div>
+
+
 </div>
 
 
 <div class="container" style="width:350px">
   <div class="FORM" >
-    <h1 style="font-size: 100% ; font-weight: bold; margin-left: 35% ; margin-top: 5%">Reset Password</h1>
+    <h1 style="font-size: 100% ;color: white ;font-weight: bold; margin-left: 35% ; margin-top: 5%">Reset Password</h1>
 
     <div class="imgcontainer">
        <img src="logo.png" alt="Avatar" class="avatar">
     </div>
 
   <div class="container">
-    <label for="uname" style="color:forestgreen;  "><b>Please confirm your email:</b></label>
-    <input type="email"   placeholder="Email ID" name="uname" onkeydown="checkforenter(this)" id="usrname" required >
+    <label for="uname" style="color:#15bf86"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email ID" name="uname" id="usrname" required>
 
 
-    <button  id="reset"  onclick="reset()"><span class="" id="spin"></span> Confirm</button>  
+    <button  id="reset" onclick="reset()">Reset Password</button>  
   </div>
 
             <h2 style="font-size: 100% ;  margin-left: 35% ; margin-bottom: 5%; margin-top: 1%">Back to <a href="/login">Login</a></h2>
 
 
 </div>
-
 </div>
 </body>
 </html>
