--- a/Views/Styles/first page.css
+++ b/Views/Styles/first page.css
@@ -1,66 +1,112 @@
-body{
-		font-family: Arial;
-		font-size: 20px;
 
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    /* Add a black background color to the top navigation */
+    .topnav {
+        background-color: #333;
+        overflow: hidden;
+    }
+
+
+    /* Style the links inside the navigation bar */
+    .topnav a {
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+
+    }
+
+
+
+    /* Hide the link that should open and close the topnav on small screens */
+    .topnav .icon {
+        display: none;
+    }
+    .topnav .current-menu-item a::before,
+    .topnav .current_page_item a::before {
+        content: "";
+        position: absolute;
+        z-index: 2;
+        left: 0;
+        right: 0;
+    }
+    .topnav li a:hover{
+        border-bottom: 2px solid #15bf86;
+        -webkit-transition-property: right;
+        transition-property: right;
+        -webkit-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        -webkit-transition-timing-function: ease-out;
+        transition-timing-function: ease-out;
+    }
+    .topnav li a:hover {
+        opacity: 1 !important;
+    }
+    .topnav li a:hover:before {
+        right: 0;
+    }
+    .topnav  li li a:before {
+        bottom: 10%;
+    }
+
+    .topnav ul li a:hover:{
+        border-bottom: 2px solid red;
+    }
+    
+	
+    .right{
+        float: right !important;
+        display: block !important;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+
+
+    }
+	topnav .search:focus{
+		width : 30%;
+		background : white;
 	}
 	
-	.topnav {
-    background-color: #333;
-    overflow: hidden;
-	background:#001a00;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: right;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-	//margin-top:1%
-
-}
-
-
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-	margin-top:1%
-}
-
-/* Add a color to the active/current link */
-.topnav a.active {
-    background-color: #4CAF50;
-    color: white;
-    margin-top:1%;
-    margin-right:1%
-
-}
-
-.topnav h1{
-    margin-left:15%;margin-right: 1%  ;margin-top: -3%; margin-bottom:-3% ;color:white ; 
-}
-
-/* When the screen is less than 600px wide, stack the links  vertically instead of horizontally */
-@media screen and (max-width: 800px) {
-    .topnav a,.topnav h1,.topnav img {
-        
-        text-align: left;
-        
-        padding: 14px;
+    .white{
+        color: white !important;
     }
-    .topnav img{
-        
-        width: 18%;
-        height: 18%;
-    }
-    .topnav a ,.topnav img,.topnav h1{
-        float:none;
-        display: block;
-    }
-   
+	.search{
+		 background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat  center;
+		margin-top : 0.5%;
+		margin-right : 1%;
+		border: solid 1px;
+		border-radius : 50%;
+		width : 1px;
+		height : 1px;
+		cursor : pointer;
+		transition: all .5s;
+		background-color : inherit;
+		color : inherit;
 
-   
-}
+	}
+	.search:focus{
+		background : none;
+		width: 200px;
+		border-radius : 20%;
+		background-color: white;
+		border-color: white;
+		font-size : 15px;;
+		-webkit-border-radius: 10em;
+		-moz-border-radius: 10em;
+		background-color : white;
+		cursor : auto ;
+		border-width : 3px;
+		color : black;
+		outline : none;
+	}
+     
