--- a/Views/provost.html
+++ b/Views/provost.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>frontpage</title>
+    <title>Provost</title>
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
     <script src="css/bootstrap.min.js"></script>
@@ -10,7 +10,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/Styles/first page.css">
+    <link rel="stylesheet" type="text/css" href="/Styles/provost.css">
 
 </head>
 <body background="new6.jpg">
@@ -20,15 +20,21 @@
   <!-- <img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" > -->
     <ul>
 
-       <li><a  href="/residentstudent" id="entry">Entry List</a></li>
-       <li><a href="/login" id="gst">Guest Form</a></li>
+      <li><a href="/home" id="home">Home</a></li>
+       <!-- <li><a href="/gform" id="gst">Guest Form</a></li> -->
        <li><a href="/contact" id="cntct">Contact</a></li>
-       <li><a class="right" href="/auth" id="login"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
-       <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID"></input></li>
-
+       <li><a href="/logout" id="logout" class="right fa fa-power-off" style="color: white;"></a></li>
+       <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID" ></input></li>
+       
      </ul>
 
 </div>
+
+
+<button class="button" id="entry"style="margin-top: 130px"><span>Entry List </span></button>
+  <button class="button" id="black"><span>Black-list </span></button>
+  <button class="button" id="report"><span>Report </span></button>
+  <button class="button" id="guestapp"><span>Guest Form Approval </span></button>
 
 </body>
 </html>
