--- a/Views/application.html
+++ b/Views/application.html
@@ -11,8 +11,10 @@
     
     <link rel="stylesheet" href="/Styles/bootstrap.min.css">
     <script src="/Script/bootstrap.min.js"></script>
-
+    <link rel="stylesheet" href="/Styles/toast.css">
+    <script src="/Script/toast.js"></script>
     <link rel="stylesheet" type="text/css" href="/Styles/application.css">
+    <script type="text/javascript" src="/Script/application.js"></script>
 
 </head>
 <body background="new6.jpg" style="background-repeat: no-repeat; background-attachment: fixed;">
@@ -223,7 +225,7 @@
             <div class="form-group row">
 
                 <div class="w" style="margin-left:25%; width:115%">
-                    <input type="submit"  class="btn btn-success" name="SUBMIT" style="width: 220px;">
+                    <input type="submit"  class="btn btn-success"  style="width: 220px;">
                 </div>
             </div>
 
