--- a/Views/manager.html
+++ b/Views/manager.html
@@ -5,11 +5,12 @@
     <title>Manager</title>
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
-    <script src="css/bootstrap.min.js"></script>
+    
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="/Script/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/Styles/provost.css">
 
 </head>
@@ -23,8 +24,11 @@
       <li><a href="/" id="home">Home</a></li>
        <!-- <li><a href="/gform" id="gst">Guest Form</a></li> -->
        <li><a href="/contact" id="cntct">Contact</a></li>
+       <li><a href="/application"> Add New Stuednts </a></li>
+
        <li><a href="/logout" id="logout" class="right fa fa-power-off" style="color: white;"></a></li>
        <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID" ></input></li>
+
        
      </ul>
 
