--- a/Views/table.html
+++ b/Views/table.html
@@ -28,7 +28,7 @@
     <ul>
 
        <li><a  href="/residentstudent" id="entry" style="text-decoration: none !important; ">Home</a></li>
-       <li><a href="/" id="login" style="text-decoration: none;">Add Student</a></li>
+       <li><a href="/login" id="login" style="text-decoration: none;">Add Student</a></li>
       
        <li>      <a href="#"  class="lgbtn" style="  color:white"  id="logout" > Log out
           <span class="glyphicon glyphicon-off"></span>
