--- a/Views/ansar.html
+++ b/Views/ansar.html
@@ -10,7 +10,8 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="ansar.css">
+    <link rel="stylesheet" type="text/css" href="/Styles/ansar.css">
+     <script type="text/javascript" src="/Script/logout.js" ></script>
 
 </head>
 <body background="new6.jpg">
@@ -23,7 +24,7 @@
       <li><a href="/home" id="home">Home</a></li>
        <!-- <li><a href="/gform" id="gst">Guest Form</a></li> -->
        <li><a href="/contact" id="cntct">Contact</a></li>
-       <li><a href="/logout" id="logout" class="right fa fa-power-off" style="color: white;"></a></li>
+       <li><a href="#" onclick="logout()" id="logout" class="right fa fa-power-off" style="color: white;"></a></li>
       
        
      </ul>
