--- a/Views/application.html
+++ b/Views/application.html
@@ -15,7 +15,7 @@
     <script src="/Script/toast.js"></script>
     <link rel="stylesheet" type="text/css" href="/Styles/application.css">
     <script type="text/javascript" src="/Script/application.js"></script>
-
+     <script type="text/javascript" src="/Script/logout.js" ></script>
 </head>
 <body background="new6.jpg" style="background-repeat: no-repeat; background-attachment: fixed;">
 
@@ -25,7 +25,7 @@
     <ul>
 
        <li><a  href="/" id="entry">Entry List</a></li>
-       <li><a href="/" id="gst">Guest Form</a></li>
+       <li><a href="/residentstudent" id="gst">Resident Student</a></li>
        <li><a href="/contact" id="cntct">Contact</a></li>
        <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID"></input></li>
      </ul>
@@ -42,6 +42,11 @@
         <img src="pp.jpg" alt="" class="float-right" style="margin-right: -15% " height="100" width="100">
         
     </div>
+
+    <div class="" >                
+                <input id="image" style="width:50%;margin-left: 26.8%;  margin-top: 7% ;border:transparent; color:transparent;background: transparent;"  type="file" name="profile_photo" placeholder="Photo"  capture>
+     </div>
+
   <div class="container">
     <h1 style="color: white">Registration Form</h1>
     <p style="color: white">Please fill in this form to add a new student.</p>
