--- a/Views/first page.html
+++ b/Views/first page.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>frontpage</title>
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
-    <script src="css/bootstrap.min.js"></script>
-
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+   
+    <link rel="stylesheet" type="text/css" href="/Styles/first page.css">
+   <!--  <link rel="stylesheet" href="bootstrap.min.css"> -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/Styles/first page.css">
+     <script src="/Script/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather" />
+        
 
 </head>
 <body background="new6.jpg">
@@ -20,15 +24,27 @@
   <!-- <img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" > -->
     <ul>
 
-       <li><a  href="/residentstudent" id="entry">Entry List</a></li>
-       <li><a href="/login" id="gst">Guest Form</a></li>
+        <li><a  href="/" id="entry">Entry List</a></li>
+       <li><a href="/guestform" id="gst">Guest Form</a></li>
        <li><a href="/contact" id="cntct">Contact</a></li>
        <li><a class="right" href="/auth" id="login"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
        <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID"></input></li>
-
+        
      </ul>
 
 </div>
+
+<div class = "container" style="text-align: center ; margin-top: 10% ; width: 50%">
+<h1 style="color:white;font-family:Tangerine,Palatino ; font-size: 450%">Entry Register of Osmani Hall</h1>
+
+<h2 style="font-size: 150%;color:white; font-family: Josefin Slab,Times New Roman;" >The website is about the digitalization of entry exit system of Osmany Hall. The exact time of arrival and departure of students will be automatically registered and if any occurrences appear, higher authority will be readily informed.</h2>
+ </div>
+  
+
+  
+
+
+
 
 </body>
 </html>
