--- a/Views/manager.html
+++ b/Views/manager.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="/Script/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/Styles/provost.css">
+    <script type="text/javascript" src="/Script/logout.js" ></script>
 
 </head>
 <body background="new6.jpg">
@@ -26,7 +27,7 @@
        <li><a href="/contact" id="cntct">Contact</a></li>
        <li><a href="/application"> Add New Stuednts </a></li>
 
-       <li><a href="/logout" id="logout" class="right fa fa-power-off" style="color: white;"></a></li>
+       <li><a href="#" onclick="logout()" id="logout" class="right fa fa-power-off" style="color: white;"></a></li>
        <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID" ></input></li>
 
        
