--- a/Views/provost.html
+++ b/Views/provost.html
@@ -11,6 +11,7 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/Styles/provost.css">
+     <script type="text/javascript" src="/Script/logout.js" ></script>
 
 </head>
 <body background="new6.jpg">
@@ -20,10 +21,10 @@
   <!-- <img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" > -->
     <ul>
 
-      <li><a href="/home" id="home">Home</a></li>
+      <li><a href="/" id="home">Home</a></li>
        <!-- <li><a href="/gform" id="gst">Guest Form</a></li> -->
        <li><a href="/contact" id="cntct">Contact</a></li>
-       <li><a href="/logout" id="logout" class="right fa fa-power-off" style="color: white;"></a></li>
+       <li><a href="#" onclick="logout()" id="logout" class="right fa fa-power-off" style="color: white;"></a></li>
        <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID" ></input></li>
        
      </ul>
