--- a/Views/table.html
+++ b/Views/table.html
@@ -14,6 +14,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script type="text/javascript" src="/Script/table.js"></script>
 	<link href="/Styles/table.css" rel="stylesheet"/>
+	 <script type="text/javascript" src="/Script/logout.js" ></script>
 </head>
 
 
@@ -27,14 +28,10 @@
   <!-- <img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" > -->
     <ul>
 
-       <li><a  href="/residentstudent" id="entry" style="text-decoration: none !important; ">Home</a></li>
-       <li><a href="/login" id="login" style="text-decoration: none;">Add Student</a></li>
+       <li><a  href="/" id="entry" style="text-decoration: none !important; ">Home</a></li>
+       <li><a href="/application" id="login" style="text-decoration: none;">Add Student</a></li>
       
-       <li>      <a href="#"  class="lgbtn" style="  color:white"  id="logout" > Log out
-          <span class="glyphicon glyphicon-off"></span>
-        </a>    </li>
-		
-	  
+       <li> <a href="#" onclick="logout()" id="logout" class="right fa fa-power-off" style="color: white;"></a></li>
       
      </ul>
 
