--- a/Views/Styles/guestForm.css
+++ b/Views/Styles/guestForm.css
@@ -1,11 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Slab');
-.FORM{
-    border: 3px solid #15bf86;
-    background: white;
-    margin-top:100px;
-
-}
-
 
     ul {
         list-style-type: none;
@@ -118,3 +110,96 @@
 		outline : none;
 	}
      
+
+
+
+
+
+
+input{
+   // padding: 10px;
+    margin-top: 10px;
+    width: 250px;
+    background: #ccffcc;
+    border: 2px solid forestgreen;
+}
+
+.form-group{
+    width:300px;
+}
+h3,h4,h5,h6{
+        color: #006600;
+
+}
+
+input[type = "date"]{
+    /*display: block;*/
+    margin-bottom: 2px;
+    margin-left: 30%;
+    width: 150%;
+    content: attr(placeholder) !important;
+    /*border: 2px solid steelblue;*/
+    border-width: 2px;
+    /*border-color:#006600;*/
+    background: #e1dddc;
+}
+
+
+
+input[type = "text"]{
+    /*display: block;*/
+    margin-bottom: 2px;
+    margin-left: 30%;
+    width: 150%;
+    /*border: 2px solid steelblue;*/
+    border-width: 2px;
+    /*border-color:#006600;*/
+    background: #e1dddc;
+}
+
+input[type = "number"]{
+    /*display: block;*/
+    margin-bottom: 2px;
+     margin-left: 30%;
+    width: 150%;
+    /*border: 2px solid steelblue;*/
+    /*border-color:#006600;*/
+    background: #e1dddc;
+
+}
+
+input[type = "email"]{
+    /*display: block;*/
+    margin-bottom: 2px;
+     margin-left: 30%;
+    width: 150%;
+    /*border: 2px solid steelblue;*/
+    /*border-color:#006600;*/
+    background: #e1dddc;
+
+}
+
+
+input[type = "radio"]{
+    margin: 0 8px 25px 18px;
+     margin-left: 30%;
+     color:white;
+}
+input[type = "radio"]:first-child{
+   /* margin-left :0;*/
+    margin-left: 30%;
+}
+input[type = "submit"]{
+    width:344px;
+    height:45px;
+    border:none;
+    background:#15bf86;
+    color: white;
+    margin-left:60%;
+
+}
+
+
+
+
+
