--- a/Views/auth.html
+++ b/Views/auth.html
@@ -20,8 +20,8 @@
   <!-- <img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" > -->
     <ul>
       <li><a href="/" id="home">Home</a></li>
-      <li><a  href="/residentstudent" id="entry">Entry List</a></li>
-      <li><a href="/" id="gst">Guest Form</a></li>
+      <li><a  href="/" id="entry">Entry List</a></li>
+      <li><a href="/guestform" id="gst">Guest Form</a></li>
       <li><a href="/contact" id="cntct">Contact</a></li>
       <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID" ></input></li>
      </ul>
